# retrieval-playground

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  MANIFEST.in  MID_RETRIEVAL_OPTIMIZATION_PLAN.md  POST_RETRIEVAL_MODERNIZATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  start-workshop.bat  start-workshop.sh
data/: DATASET_README.md  workshop_metadata.json
data/test_data/: chunking_test_queries.json  evaluation_dataset.json
retrieval_playground/: __init__.py
retrieval_playground/data/qdrant_db/baseline/: meta.json
retrieval_playground/data/results/: chunking_evaluation_results.csv
retrieval_playground/src/: baseline_rag.py  evaluation.py
retrieval_playground/src/evaluation/: EVALUATION.md  __init__.py  base.py  generation_metrics.py  pipeline.py  ragas_runner.py  retrieval_metrics.py  tool_metrics.py
retrieval_playground/src/mid_retrieval/: 2_Mid_Retrieval_Methods.ipynb  2_Retrieval.ipynb  MID_RETRIEVAL.md  adaptive_retrieval.py  hybrid_search.py  multi_query_hybrid.py  parent_child_retrieval.py  reranking.py  route_driven_retrieval.py  setup_hybrid_collection.py
retrieval_playground/src/post_retrieval/: 3_Post_Retrieval.ipynb  POST_RETRIEVAL.md  Post_Retrieval.ipynb  __init__.py  context_compression.py  context_preparation.py  document_assembly.py  document_chain.py  knowledge_refinement.py  retrieval_grading.py
retrieval_playground/src/pre_retrieval/: 1A_Chunking.ipynb  1A_Pre_Chunking_Methods.ipynb  1B_Pre_Query_Methods.ipynb  1B_Query_Rephrasing_and_Routing.ipynb  PRE_RETRIEVAL.md  Pre_1_Chunking.ipynb  Pre_2_Rephrasing.ipynb  Pre_3_Routing.ipynb  chunking_evaluation.py  chunking_manager.py  chunking_strategies.py  query_rephrasing.py  routing.py
retrieval_playground/src/tutorial/: 1A_Pre_Chunking_Methods.ipynb  1B_Pre_Query_Methods.ipynb  2_Mid_Retrieval_Methods.ipynb  3_Post_Retrieval.ipynb
retrieval_playground/tests/: TEST_README.md  chunking_evaluation_results.csv  test_adaptive_retrieval.py  test_advanced_patterns.py  test_data_generation.py  test_evaluation_smoke.py  test_hybrid_search.py  test_hybrid_with_reranking.py  test_queries.json  test_query_rephrasing.py  test_reranking_models.py  test_route_driven.py  test_routing.py
retrieval_playground/tutorial/: 1A_Pre_Chunking_Methods.ipynb  1B_Pre_Query_Methods.ipynb  2A_Basic_Mid_Retrieval_Methods.ipynb  2B_Advanced_Mid_Retrieval_Methods.ipynb  2_Mid_Retrieval_Methods.ipynb  3_Post_Retrieval.ipynb  4_Evaluation.ipynb  5_Agentic_RAG.ipynb  README.md
retrieval_playground/utils/: __init__.py  collection_manager.py  config.py  constants.py  model_manager.py  pylogger.py  query_classifier.py  ragas_compat.py
setup-guides/: README.md  SETUP_LINUX.md  SETUP_MAC.md  SETUP_WINDOWS.md  SETUP_WITHOUT_DOCKER.md  verify_setup.ipynb
(+18 files in other folders)
